// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the base component correctly 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        color="link"
        elementRef={[Function]}
        href="http://www.non_default_url.com"
        iconPlacement="start"
        isWithinText={false}
        theme={
          Object {
            "mediumHeight": "normal",
            "mediumPaddingHorizontal": "0",
          }
        }
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        color="danger"
      >
        Missing
      </Pill>
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <div
      className="Opportunity-styles__points"
    >
      <ScreenReaderContent
        as="span"
      >
        20 points
      </ScreenReaderContent>
      <PresentationContent
        as="span"
      >
        <span
          className="Opportunity-styles__pointsNumber"
        >
          20
        </span>
        points
      </PresentationContent>
    </div>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <IconButton
      as="button"
      color="secondary"
      cursor="pointer"
      elementRef={[Function]}
      margin="0"
      onClick={[Function]}
      renderIcon={[Function]}
      screenReaderLabel="Dismiss this is a description about the opportunity"
      shape="rectangle"
      size="small"
      type="button"
      withBackground={false}
      withBorder={false}
    />
  </div>
</div>
`;

exports[`renders the base component correctly with 0 points 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        color="link"
        elementRef={[Function]}
        href="http://www.non_default_url.com"
        iconPlacement="start"
        isWithinText={false}
        theme={
          Object {
            "mediumHeight": "normal",
            "mediumPaddingHorizontal": "0",
          }
        }
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        color="danger"
      >
        Missing
      </Pill>
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <div
      className="Opportunity-styles__points"
    >
      <ScreenReaderContent
        as="span"
      >
        0 points
      </ScreenReaderContent>
      <PresentationContent
        as="span"
      >
        <span
          className="Opportunity-styles__pointsNumber"
        >
          0
        </span>
        points
      </PresentationContent>
    </div>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <IconButton
      as="button"
      color="secondary"
      cursor="pointer"
      elementRef={[Function]}
      margin="0"
      onClick={[Function]}
      renderIcon={[Function]}
      screenReaderLabel="Dismiss this is a description about the opportunity"
      shape="rectangle"
      size="small"
      type="button"
      withBackground={false}
      withBorder={false}
    />
  </div>
</div>
`;

exports[`renders the base component correctly without points 1`] = `
<div
  className="Opportunity-styles__root"
>
  <div
    className="Opportunity-styles__oppNameAndTitle"
  >
    <div
      className="Opportunity-styles__oppName"
    >
      course about stuff
    </div>
    <div
      className="Opportunity-styles__title"
    >
      <Link
        color="link"
        elementRef={[Function]}
        href="http://www.non_default_url.com"
        iconPlacement="start"
        isWithinText={false}
        theme={
          Object {
            "mediumHeight": "normal",
            "mediumPaddingHorizontal": "0",
          }
        }
      >
        this is a description about the opportunity
      </Link>
    </div>
  </div>
  <div
    className="Opportunity-styles__footer"
  >
    <div
      className="Opportunity-styles__status"
    >
      <Pill
        color="danger"
      >
        Missing
      </Pill>
      <div
        className="Opportunity-styles__due"
      >
        <span
          className="Opportunity-styles__dueText"
        >
          Due:
        </span>
         
        March 9, 2017 at 1:40 PM
      </div>
    </div>
    <ScreenReaderContent
      as="span"
    >
      There are no points associated with this item
    </ScreenReaderContent>
  </div>
  <div
    className="Opportunity-styles__close"
  >
    <IconButton
      as="button"
      color="secondary"
      cursor="pointer"
      elementRef={[Function]}
      margin="0"
      onClick={[Function]}
      renderIcon={[Function]}
      screenReaderLabel="Dismiss this is a description about the opportunity"
      shape="rectangle"
      size="small"
      type="button"
      withBackground={false}
      withBorder={false}
    />
  </div>
</div>
`;
